https://issues.apache.org/jira/browse/CAY

----------------------------------
Release: 4.2.RC2
Date:
----------------------------------
Changes/New Features:

CAY-2741 Cleanup TransactionDescriptor and deprecate DefaultTransactionDescriptor
CAY-2743 Deprecate ROP
CAY-2749 Deprecate object clustering transports
CAY-2750 Deprecate web module

Bug Fixes:


----------------------------------
Release: 4.2.RC1
Date: June 3, 2022
----------------------------------
Changes/New Features:

CAY-2711 JDK 17 compatibility
CAY-2728 Add ExtendedType to generate user-friendly exceptions for internally used values

Bug Fixes:

CAY-2630 Prefetched relationships not preserving pending changes
CAY-2697 Read-only cgen template creates mutator methods for to-many relationships
CAY-2724 Duplicating relationship after editing its name
CAY-2727 Modeler: cgen destDir Unix platform path separator
CAY-2729 Unable to use custom templates from a folder at upper level then datamap
CAY-2730 Duplicating lines in a cgen config saved to datamap.xml
CAY-2731 Exception when setting a CLOB on H2 v2.0.202
CAY-2733 Modeler can't use custom templates set in a datamap
CAY-2734 Improve support for the DECIMAL type
CAY-2736 Can't use function names as a path in a string-based expression

----------------------------------
Release: 4.2.B1
Date: November 25, 2021
----------------------------------
Changes/New Features:

CAY-2399 Convert string values to Enum in qualifiers
CAY-2637 Allow forcing a custom Connection for a transaction
CAY-2718 Use testcontainers for the integration tests

Bug Fixes:

CAY-2092 Exception for query that uses pagination and sorting on to-many
CAY-2694 Precision issues with reverse / forward engineering of time types on MySQL
CAY-2699 Modeler: dbimport schema view not working on SQLite
CAY-2702 Modeler: Callbacks table has too small default width
CAY-2703 Modeler: incorrect active tab style on the MacOS version