@@ -20,6 +20,8 @@ CAY-2750 Deprecate web module
 
 Bug Fixes:
 
+CAY-2755 Modeler: Entities are not sorted by name in the class generation view
+
 
 ----------------------------------
 Release: 4.2.RC1
